--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-context-mutex": "^1.0.8",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass-loader": "8.0.2",
